// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`against arrow snapshots 1`] = `
<svg
  className="arrow"
  height={408}
  style={
    Object {
      "bottom": 0,
      "left": 0,
    }
  }
  width={400}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="arrow__line"
    d="M 0 408 C 240 360, 160 56, 400 8"
  />
  <circle
    className="arrow__head"
    cx={400}
    cy={8}
    r={8}
  />
</svg>
`;

exports[`against arrow snapshots 2`] = `
<svg
  className="arrow"
  height={308}
  style={
    Object {
      "bottom": 92,
      "left": 0,
    }
  }
  width={400}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="arrow__line"
    d="M 0 0 C 240 36, 160 264, 400 300"
  />
  <circle
    className="arrow__head"
    cx={400}
    cy={300}
    r={8}
  />
</svg>
`;

exports[`against arrow snapshots 3`] = `
<svg
  className="arrow"
  height={408}
  style={
    Object {
      "bottom": -8,
      "left": 0,
    }
  }
  width={0}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="arrow__line"
    d="M 0 0 C 0 48, 0 352, 0 400"
  />
  <circle
    className="arrow__head"
    cx={0}
    cy={400}
    r={8}
  />
</svg>
`;

exports[`against arrow snapshots 4`] = `
<svg
  className="arrow"
  height={8}
  style={
    Object {
      "bottom": 400,
      "left": 0,
    }
  }
  width={400}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    className="arrow__line"
    d="M 400 8 C 160 8, 240 8, 0 8"
  />
  <circle
    className="arrow__head"
    cx={0}
    cy={8}
    r={8}
  />
</svg>
`;
